# funtech-test-task

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: main.py
app/api/routes/: __init__.py  auth.py  health.py  orders.py
app/core/: config.py  security.py
app/db/: session.py
app/messaging/: consumer.py  producer.py
app/models/: __init__.py  order.py  user.py
app/schemas/: __init__.py  health.py  order.py  token.py  user.py
app/services/: cache.py  orders.py
app/tasks/: worker.py
tests/: conftest.py  test_auth.py  test_health.py  test_orders.py  test_schemas.py  test_security.py
